<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".LoginCoffee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="6dp"
        >


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            app:srcCompat="@drawable/coffee_cup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />
        <!-- campos del formulario -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_username"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"

            app:endIconTint="@color/red"
            app:hintTextColor="@color/red"
            app:startIconTint="@color/red">>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="password"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            android:id="@+id/passwordTextField"
            android:transitionName="passwordInputTextTrans"
            app:endIconTint="@color/red"
            app:hintTextColor="@color/red"
            app:startIconTint="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- botones del formulario -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_next"
                app:backgroundTint="@color/red" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="16dp"
                android:text="No account yet? Create Now"
                android:textColor="@color/red"
                android:textSize="20sp" />


        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>